--- a/apworlds.html
+++ b/apworlds.html
@@ -50,11 +50,11 @@
                         <strong>Archipelago Discord Server</strong> [<a href="https://discord.gg/8Z65BR2">Link</a>]<br />
                         <strong>Alternative Resource:</strong> <a href="https://docs.google.com/spreadsheets/d/1733DtKxylcSmCxn216rOVkJNS-aezFu8nURRw86CjKc/edit?gid=58422002">Community-Maintained Google Sheet</a>
                         <br />
-                        <span>Last Updated: January 13, 2025</span>
+                        <span>Last Updated: January 20, 2025</span>
                     </p>
                 </header>
 
-                <h2>APWorlds (237)</h2>
+                <h2>APWorlds (244)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -87,6 +87,11 @@
                 <small><a href="#BanjoTooie">Banjo-Tooie (N64)</a></small>
                 <small><a href="#Blasphemous">Blasphemous (PC)</a></small>
                 <small><a href="#BloonsTD6">Bloons TD 6 (PC)</a></small>
+                <br />
+                <small>[Bomberman Franchise]</small>
+                <small>&emsp;<a href="#Bomberman64">Bomberman 64 (N64)</a></small>
+                <small>&emsp;<a href="#BombermanHero">Bomberman Hero (N64)</a></small>
+                <br />
                 <small><a href="#BombRushCyberfunk">Bomb Rush Cyberfunk (PC)</a></small>
                 <small><a href="#Brotato">Brotato (PC)</a></small>
                 <small><a href="#BumperStickers">Bumper Stickers (PC)</a></small>
@@ -109,6 +114,7 @@
                 <small><a href="#ChecksMate">ChecksMate (PC)</a></small>
                 <small><a href="#ChronoTrigger">Chrono Trigger (SNES)</a></small>
                 <small><a href="#Clique">Clique (Web)</a></small>
+                <small><a href="#CornKidz64">Corn Kidz 64 (PC)</a></small>
                 <small><a href="#CrossCode">CrossCode (PC)</a></small>
                 <small><a href="#Crystalis">Crystalis (NES)</a></small>
                 <small><a href="#Cuphead">Cuphead (PC)</a></small>
@@ -257,11 +263,13 @@
                 <small><a href="#Overcooked2">Overcooked! 2 (PC)</a></small>
                 <small><a href="#OxygenNotIncluded">Oxygen Not Included (PC)</a></small>
                 <br />
-                <small>[Pokémon Franchise]</small>
+                <small>[Pokémon Franchise - Mainline Series]</small>
                 <small>&emsp;<a href="#PokemonRedAndBlue">Pokémon Red and Blue (GB)</a></small>
                 <small>&emsp;<a href="#PokemonCrystal">Pokémon Crystal (GBC)</a></small>
                 <small>&emsp;<a href="#PokemonFireRedAndLeafGreen">Pokémon FireRed and LeafGreen (GBA)</a></small>
                 <small>&emsp;<a href="#PokemonEmerald">Pokémon Emerald (GBA)</a></small>
+                <small>[Pokémon Franchise - Mystery Dungeon Series]</small>
+                <small>&emsp;<a href="#PokemonMysteryDungeonExplorersOfSky">Pokémon Mystery Dungeon: Explorers of Sky (DS)</a></small>
                 <br />
                 <small><a href="#Prodigal">Prodigal (PC)</a></small>
                 <small><a href="#Pseudoregalia">Pseudoregalia (PC)</a></small>
@@ -280,6 +288,7 @@
                 <small>[Risk of Rain Franchise]</small>
                 <small>&emsp;<a href="#RiskOfRain">Risk of Rain (PC)</a></small>
                 <small>&emsp;<a href="#RiskOfRain2">Risk of Rain 2 (PC)</a></small>
+                <small>&emsp;<a href="#RiskOfRainReturns">Risk of Rain Returns (PC)</a></small>
                 <br />
                 <small><a href="#RogueLegacy">Rogue Legacy (PC)</a></small>
                 <small><a href="#RustedMoss">Rusted Moss (PC)</a></small>
@@ -328,6 +337,7 @@
                 <small>&emsp;<a href="#TheLegendOfZeldaOracleOfAges">The Legend of Zelda: Oracle of Ages (GBC)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaOracleOfSeasons">The Legend of Zelda: Oracle of Seasons (GBC)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaTheWindWaker">The Legend of Zelda: The Wind Waker (GC)</a></small>
+                <small>&emsp;<a href="#TheLegendOfZeldaTwilightPrincess">The Legend of Zelda: Twilight Princess (GC)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaALinkBetweenWorlds">The Legend of Zelda: A Link Between Worlds (3DS)</a></small>
                 <small>[The Legend of Zelda Franchise - Hacks]</small>
                 <!-- <small>&emsp;<a href="#OcarinaOfTimeMQWaterTemple">Ocarina of Time but it's just Master Quest Water Temple (N64)</a></small> -->
@@ -357,6 +367,7 @@
                 <small>&emsp;<a href="#WarioLand4">Wario Land 4 (GBA)</a></small>
                 <br />
                 <small><a href="#WateryWords">Watery Words (Web)</a></small>
+                <small><a href="#WEBFISHING">WEBFISHING (PC)</a></small>
                 <small><a href="#YachtDice">Yacht Dice (Web)</a></small>
                 <small><a href="#YookaLaylee">Yooka-Laylee (PC)</a></small>
                 <small><a href="#XCOM2WarOfTheChosen">XCOM 2: War of the Chosen (PC)</a></small>
@@ -640,6 +651,24 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1188559959508668527">Link</a>]</li>
                 </ul>
 
+                <h2>Bomberman Franchise</h2>
+
+                <h3><span id="Bomberman64"></span> Bomberman 64 (N64)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1326400868773400677/1329149887211769909">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1326400868773400677">Link</a>]</li>
+                </ul>
+
+                <h3><span id="BombermanHero"></span> Bomberman Hero (N64)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1330612852867858505/1330911342529613924">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1330612852867858505">Link</a>]</li>
+                </ul>
+
+                <hr />
+
                 <h3><span id="BombRushCyberfunk"></span> Bomb Rush Cyberfunk (PC)</h3>
 
                 <ul>
@@ -791,6 +820,15 @@
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/ScipioWright/Clique-PopTracker/releases/latest">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Clique/guide/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090815835825774683">Link</a>]</li>
+                </ul>
+
+                <h3><span id="CornKidz64"></span> Corn Kidz 64 (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Cyb3RGER/cornkidz64_apworld/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/Cyb3RGER/CornKidzAP/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Cyb3RGER/cornkidz64_apworld/blob/main/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1282470024560508990">Link</a>]</li>
                 </ul>
 
                 <h3><span id="CrossCode"></span> CrossCode (PC)</h3>
@@ -1018,7 +1056,7 @@
                 <h3><span id="FinalFantasy4"></span><span id="FinalFantasy4FreeEnterprise"></span> Final Fantasy IV (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1170144930610557008/1318241545610334269">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1170144930610557008/1329814020504420375">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/seto10987/Final-Fantasy-4-Free-Enterprise-AP-Poptracker-Pack/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1170144930610557008">Link</a>]</li>
                 </ul>
@@ -1816,7 +1854,7 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1209238808625946634">Link</a>]</li>
                 </ul>
 
-                <h2>Pokémon Franchise</h2>
+                <h2>Pokémon Franchise - Mainline Series</h2>
 
                 <h3><span id="PokemonRedAndBlue"></span> Pokémon Red and Blue (GB)</h3>
 
@@ -1853,6 +1891,15 @@
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/seto10987/Archipelago-Emerald-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Pokemon%20Emerald/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236871468711966">Link</a>]</li>
+                </ul>
+
+                <h2>Pokémon Franchise - Mystery Dungeon Series</h2>
+
+                <h3><span id="PokemonMysteryDungeonExplorersOfSky"></span> Pokémon Mystery Dungeon: Explorers of Sky (DS)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/CrypticMonkey33/ArchipelagoExplorersOfSky/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1175911373822242946">Link</a>]</li>
                 </ul>
 
                 <hr />
@@ -1970,6 +2017,14 @@
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/bluejello42/Ror2-AP-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Risk%20of%20Rain%202/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/884926818480705586">Link</a>]</li>
+                </ul>
+
+                <h3><span id="RiskOfRainReturns"></span> Risk of Rain Returns (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> Same APWorld as RoR1 [<a href="https://github.com/studkid/RoR_Archipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://thunderstore.io/c/risk-of-rain-returns/p/studkid/Archipelago/">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1172336306890747984">Link</a>]</li>
                 </ul>
 
                 <hr />
@@ -2278,7 +2333,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
-                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090821869340467332/1326688594215174235">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090821869340467332/1328574103535484928">Link</a>]</li>
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Br00ty/tloz_brooty/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/The%20Legend%20of%20Zelda/multiworld/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090821869340467332">Link</a>]</li>
@@ -2347,6 +2402,13 @@
                     <li><strong>Tracker</strong> PopTracker Pack [<a href="https://github.com/Mysteryem/ww-poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/tanjo3/tww_apworld/blob/master/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1080383306748678165">Link</a>]</li>
+                </ul>
+
+                <h3><span id="TheLegendOfZeldaTwilightPrincess"></span> The Legend of Zelda: Twilight Princess (GC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/WritingHusky/Twilight_Princess_apworld/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1110253490875404388">Link</a>]</li>
                 </ul>
 
                 <h3><span id="TheLegendOfZeldaALinkBetweenWorlds"></span> The Legend of Zelda: A Link Between Worlds (3DS)</h3>
@@ -2510,6 +2572,7 @@
 
                 <ul>
                     <li><strong>Officially supported. APWorld included with Archipelago installation</strong></li>
+                    <li><strong>Beta APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090824439710625822/1330215017752301599">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Wargroove/wargroove/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090824439710625822">Link</a>]</li>
                 </ul>
@@ -2552,6 +2615,13 @@
                     <li><strong>APWorld + Game Download (HTML File)</strong> [<a href="https://github.com/spineraks-org/ArchipelagoWateryWords/releases">Link</a>]</li>
                     <li><strong>Website</strong> [<a href="https://watery-words-ap.netlify.app">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1292965246847418388">Link</a>]</li>
+                </ul>
+
+                <h3><span id="WEBFISHING"></span> WEBFISHING (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/mwoiii/webfishing-ap/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1299564055597416449">Link</a>]</li>
                 </ul>
 
                 <h3><span id="YachtDice"></span> Yacht Dice (Web)</h3>
