--- a/index.html
+++ b/index.html
@@ -49,6 +49,74 @@
                     </p>
                 </header>
 
+                <h2 id="W202503">Week of January 13-19, 2025</h2>
+
+                <ul>
+                    <li><strong>AP Release Candidate</strong> 0.6.0 RC1 [<a href="https://discord.com/channels/731205301247803413/731214280439103580/1330741670991499377">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Ape Escape [<a href="apworlds.html#ApeEscape">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Dark Souls: Remastered [<a href="apworlds.html#DarkSoulsRemastered">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Donkey Kong Country 2: Diddy's Kong Quest [<a href="apworlds.html#DonkeyKongCountry2DiddysKongQuest">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy IV [<a href="apworlds.html#FinalFantasy4">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Final Fantasy Tactics Advance [<a href="apworlds.html#FinalFantasyTacticsAdvance">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Getting Over It with Bennett Foddy [<a href="apworlds.html#GettingOverItWithBennettFoddy">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Keymaster's Keep [<a href="apworlds.html#KeymastersKeep">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mega Man 3 [<a href="apworlds.html#MegaMan3">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Minishoot' Adventures [<a href="apworlds.html#MinishootAdventures">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario [<a href="apworlds.html#PaperMario">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ratchet & Clank: Going Commando [<a href="apworlds.html#RatchetAndClankGoingCommando">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Satisfactory [<a href="apworlds.html#Satisfactory">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> SlotLock [<a href="apworlds.html#SlotLock">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> The Sims 4 [<a href="apworlds.html#TheSims4">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Touhou Koumakyou: The Embodiment of Scarlet Devil [<a href="apworlds.html#TouhouKoumakyouTheEmbodimentOfScarletDevil">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Universal Tracker [<a href="apworlds.html#UniversalTracker">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> The Legend of Zelda [<a href="apworlds.html#TheLegendOfZelda">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Yu-Gi-Oh! Ultimate Masters: WCT 2006 [<a href="apworlds.html#YuGiOhUltimateMastersWCT2006">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> CrossCode [<a href="apworlds.html#CrossCode">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Dark Souls: Remastered [<a href="apworlds.html#DarkSoulsRemastered">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Don't Starve Together [<a href="apworlds.html#DontStarveTogether">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Getting Over It with Bennett Foddy [<a href="apworlds.html#GettingOverItWithBennettFoddy">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Minishoot' Adventures [<a href="apworlds.html#MinishootAdventures">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Satisfactory [<a href="apworlds.html#Satisfactory">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> The Sims 4 [<a href="apworlds.html#TheSims4">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> ULTRAKILL [<a href="apworlds.html#ULTRAKILL">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Bomberman 64 [<a href="apworlds.html#Bomberman64">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Bomberman Hero [<a href="apworlds.html#BombermanHero">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Corn Kidz 64 [<a href="apworlds.html#CornKidz64">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Pokémon Mystery Dungeon: Explorers of Sky [<a href="apworlds.html#PokemonMysteryDungeonExplorersOfSky">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Risk of Rain Returns [<a href="apworlds.html#RiskOfRainReturns">Link</a>]</li>
+                    <li><strong>New APWorld</strong> The Legend of Zelda: Twilight Princess [<a href="apworlds.html#TheLegendOfZeldaTwilightPrincess">Link</a>]</li>
+                    <li><strong>New APWorld</strong> WEBFISHING [<a href="apworlds.html#WEBFISHING">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Wargroove [<a href="apworlds.html#Wargroove">Link</a>]</li>
+                </ul>
+
                 <h2 id="W202502">Week of January 6-12, 2025</h2>
 
                 <ul>
