--- a/apworlds.html
+++ b/apworlds.html
@@ -54,7 +54,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (244)</h2>
+                <h2>APWorlds (242)</h2>
                 
                 <small>[-- Meta APWorlds]</small>
                 <small>&emsp;<a href="#APBingo">APBingo (Meta)</a></small>
@@ -268,8 +268,8 @@
                 <small>&emsp;<a href="#PokemonCrystal">Pokémon Crystal (GBC)</a></small>
                 <small>&emsp;<a href="#PokemonFireRedAndLeafGreen">Pokémon FireRed and LeafGreen (GBA)</a></small>
                 <small>&emsp;<a href="#PokemonEmerald">Pokémon Emerald (GBA)</a></small>
-                <small>[Pokémon Franchise - Mystery Dungeon Series]</small>
-                <small>&emsp;<a href="#PokemonMysteryDungeonExplorersOfSky">Pokémon Mystery Dungeon: Explorers of Sky (DS)</a></small>
+                <!-- <small>[Pokémon Franchise - Mystery Dungeon Series]</small>
+                <small>&emsp;<a href="#PokemonMysteryDungeonExplorersOfSky">Pokémon Mystery Dungeon: Explorers of Sky (DS)</a></small> -->
                 <br />
                 <small><a href="#Prodigal">Prodigal (PC)</a></small>
                 <small><a href="#Pseudoregalia">Pseudoregalia (PC)</a></small>
@@ -337,7 +337,7 @@
                 <small>&emsp;<a href="#TheLegendOfZeldaOracleOfAges">The Legend of Zelda: Oracle of Ages (GBC)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaOracleOfSeasons">The Legend of Zelda: Oracle of Seasons (GBC)</a></small>
                 <small>&emsp;<a href="#TheLegendOfZeldaTheWindWaker">The Legend of Zelda: The Wind Waker (GC)</a></small>
-                <small>&emsp;<a href="#TheLegendOfZeldaTwilightPrincess">The Legend of Zelda: Twilight Princess (GC)</a></small>
+                <!-- <small>&emsp;<a href="#TheLegendOfZeldaTwilightPrincess">The Legend of Zelda: Twilight Princess (GC)</a></small> -->
                 <small>&emsp;<a href="#TheLegendOfZeldaALinkBetweenWorlds">The Legend of Zelda: A Link Between Worlds (3DS)</a></small>
                 <small>[The Legend of Zelda Franchise - Hacks]</small>
                 <!-- <small>&emsp;<a href="#OcarinaOfTimeMQWaterTemple">Ocarina of Time but it's just Master Quest Water Temple (N64)</a></small> -->
@@ -1893,14 +1893,14 @@
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192236871468711966">Link</a>]</li>
                 </ul>
 
-                <h2>Pokémon Franchise - Mystery Dungeon Series</h2>
+                <!-- <h2>Pokémon Franchise - Mystery Dungeon Series</h2>
 
                 <h3><span id="PokemonMysteryDungeonExplorersOfSky"></span> Pokémon Mystery Dungeon: Explorers of Sky (DS)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/CrypticMonkey33/ArchipelagoExplorersOfSky/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1175911373822242946">Link</a>]</li>
-                </ul>
+                </ul> -->
 
                 <hr />
 
@@ -2404,12 +2404,12 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1080383306748678165">Link</a>]</li>
                 </ul>
 
-                <h3><span id="TheLegendOfZeldaTwilightPrincess"></span> The Legend of Zelda: Twilight Princess (GC)</h3>
+                <!-- <h3><span id="TheLegendOfZeldaTwilightPrincess"></span> The Legend of Zelda: Twilight Princess (GC)</h3>
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/WritingHusky/Twilight_Princess_apworld/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1110253490875404388">Link</a>]</li>
-                </ul>
+                </ul> -->
 
                 <h3><span id="TheLegendOfZeldaALinkBetweenWorlds"></span> The Legend of Zelda: A Link Between Worlds (3DS)</h3>
 
