--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                     <li><strong>New APWorld</strong> Bomberman 64 [<a href="apworlds.html#Bomberman64">Link</a>]</li>
                     <li><strong>New APWorld</strong> Bomberman Hero [<a href="apworlds.html#BombermanHero">Link</a>]</li>
                     <li><strong>New APWorld</strong> Corn Kidz 64 [<a href="apworlds.html#CornKidz64">Link</a>]</li>
-                    <li><strong>New APWorld</strong> Pokémon Mystery Dungeon: Explorers of Sky [<a href="apworlds.html#PokemonMysteryDungeonExplorersOfSky">Link</a>]</li>
+                    <!-- <li><strong>New APWorld</strong> Pokémon Mystery Dungeon: Explorers of Sky [<a href="apworlds.html#PokemonMysteryDungeonExplorersOfSky">Link</a>]</li> -->
                     <li><strong>New APWorld</strong> Risk of Rain Returns [<a href="apworlds.html#RiskOfRainReturns">Link</a>]</li>
-                    <li><strong>New APWorld</strong> The Legend of Zelda: Twilight Princess [<a href="apworlds.html#TheLegendOfZeldaTwilightPrincess">Link</a>]</li>
+                    <!-- <li><strong>New APWorld</strong> The Legend of Zelda: Twilight Princess [<a href="apworlds.html#TheLegendOfZeldaTwilightPrincess">Link</a>]</li> -->
                     <li><strong>New APWorld</strong> WEBFISHING [<a href="apworlds.html#WEBFISHING">Link</a>]</li>
                 </ul>
 
