--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <li><strong>APWorld Update</strong> Mega Man 3 [<a href="apworlds.html#MegaMan3">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Minishoot' Adventures [<a href="apworlds.html#MinishootAdventures">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Ori and the Blind Forest [<a href="apworlds.html#OriAndTheBlindForest">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Paper Mario [<a href="apworlds.html#PaperMario">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Paper Mario [<a href="apworlds.html#PaperMario64">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Ratchet & Clank: Going Commando [<a href="apworlds.html#RatchetAndClankGoingCommando">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Satisfactory [<a href="apworlds.html#Satisfactory">Link</a>]</li>
                     <li><strong>APWorld Update</strong> SlotLock [<a href="apworlds.html#SlotLock">Link</a>]</li>
