--- a/apworlds.html
+++ b/apworlds.html
@@ -2050,7 +2050,7 @@
                 <h3><span id="Satisfactory"></span> Satisfactory (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1018853131859267656/1221950768492445767">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/Jarno458/SatisfactoryArchipelagoMod/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://ficsit.app/mod/Archipelago">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Jarno458/Archipelago/blob/Satisfactory/worlds/satisfactory/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1018853131859267656">Link</a>]</li>
