--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
 
                 <ul>
                     <li><strong>Beta APWorld Update</strong> The Legend of Zelda [<a href="apworlds.html#TheLegendOfZelda">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> The Legend of Zelda: Link's Awakening DX [<a href="apworlds.html#TheLegendOfZeldaLinksAwakeningDX">Link</a>]</li>
                     <li><strong>Beta APWorld Update</strong> Yu-Gi-Oh! Ultimate Masters: WCT 2006 [<a href="apworlds.html#YuGiOhUltimateMastersWCT2006">Link</a>]</li>
                 </ul>
 
